sprint-1__startkit/styles/style.css
.page {
  margin: 0 auto;

  min-width: 1100px;
  max-width: 1600px;

  font-family: 'Helvetica Neue', Arial, sans-serif;
}



.logo {
  z-index: 10;

  width: 228px;
  height: 32px;
}

.logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
}

.logo_place_footer {
  position: relative;
}



.header {
  position: relative;
  margin: 0;
  padding: 0;
  display: flex;
  z-index: -15;

  height: 100vh;
  min-height: 600px;
  max-height: 756px;

  background-color: #f2f2f2;
}

.header__title {
  margin: auto;
  margin-left: 64px;

  width: 730px;

  line-height: 96px;
  font-size: 102px;
  font-weight: 600;
}

.header__subtitle {
  margin: 0;
  position: absolute;
  left: 64px;
  bottom: 30px;
  z-index: 5;

  width: 338px;

  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.header__link {
  text-decoration: none;
  color: #2f80ed;
}

.header__main-illustration {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -4;

  width: 765px;
  height: 608px;
}

.header__square-pic {
  position: absolute;
  top: 64px;
  right: 0;
  z-index: -5;

  height: 568px;
  width: 568px;

  background-color: #2f80ed;
}


.description {
  margin-top: 100px;
  display: flex;
  justify-content: center;
}



.two-columns {
  margin: 0;
  display: flex;
  justify-content: space-between;

  width: 80%;
}



.two-columns__brief {
  margin-top: 0;

  width: 175px;

  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  color: #2f80ed;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  margin-top: 30px;
  margin-bottom: 0;

  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.two-columns__paragraph:first-of-type {
  margin-top: 0;
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: 600;
}



.digits {
  margin-top: 100px;
  margin-bottom: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
}



.section-title {
  margin: 0;
  text-align: center;

  width: 60%;

  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
}



.section-subttitle {
  margin: 20px 0 0 0;
  text-align: center;

  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}



.table {
  margin: 0;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;

  width: 1100px;
}

.table__cell {
  margin: 60px 0 0 0;

  width: 250px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
}

.table__text {
  margin: 20px 0 0 0;

  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}



/*Модификаторы для тёмной темы*/

.section-title_theme_dark {
  margin: 90px 0 0 0;

  color: white;
}

.section-subttitle_theme_dark {
  color: white;
}

.table_theme_dark {
  margin-bottom: 90px;
}

.table__cell_theme_dark {
  margin: 80px 0 0 0;

  width: 200px;
  color: white;
}





.feynman {
  margin: 0;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: -15;

  height: 890px;

  background-image: url('../images/feynman.png');
  background-repeat: no-repeat;
  background-size: 867px 637px;
  background-position: left bottom;
  background-color: #f2f2f2;
}

.feynman__title {
  margin: 100px 0 0 0;
  text-align: center;

  width: 648px;

  line-height: 1.15;
  font-size: 120px;
  font-weight: 600;
}

.feynman__subtitle {
  margin: 70px 0 0 0;

  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.feynman__link {
  position: absolute;
  top: 50%;
  right: 48px;

  text-decoration: none;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  color: #2f80ed;
}



.kaufman {
  margin: 0;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: -15;

  background-color: #1f1f1f;
  overflow: hidden;
}

.kaufman__triangle {
  position: absolute;
  right: -210px;
  z-index: -14;
}



.footer {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: -15;

  min-height: 350px;
  height: 350px;

  background-color: #1f1f1f;
  color: white;
}

.footer__columns {
  margin: 60px 0 40px 0;
  display: flex;
  justify-content: space-between;

  width: 90%;
  height: 100%;
}

.footer__column {
  display: flex;
  flex-direction: column;
}

.footer__column_content_copyright {
  justify-content: space-between;
  flex-basis: 711px;
}

.footer__author {
  margin: 18px 0;

  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column-heading {
  margin: 0 0 20px 0;

  line-height: 30px;
  font-size: 18px;
  font-weight: 600;
}

.footer__column-links {
  margin: 0 0 16px 0;

  display: flex;
  flex-direction: column;
}

.footer__column-link {
  margin: 0;
  
  text-decoration: none;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;

  color: #f2f2f2;
}

.footer__social-icon {
  margin-right: 10px;

  width: 16px;
  height: 16px;
}

